# resumai

./: .env.example  .gitignore  AI_CONTENT_CACHE_README.md  AI_CONTENT_CACHE_TEST_REPORT.md  CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROJECT_DESIGN.md  README.md  UI_FIX_PLAN.md  USER_GUIDE.md  activate_env.sh  all_the_errors_i_didnt_catch_the_first_three_times.md  cache_manager.py  cdk.context.json  cleanup_fake_jobs.py  cleanup_old_css.py  comprehensive_cache_tests.py  comprehensive_system_tests.py  cover_letter_1password_sr_dir_csm.yaml  cover_letter_80twenty_director_patient_growth.yaml  cover_letter_alma.yaml  cover_letter_amperity_vp_cs.yaml  cover_letter_director_client_success_affirm.yaml  cover_letter_format_differences.md  debug_email_full.html  dependencies.sh  fix_yaml_characters.py  issues.md  pyproject.toml  pytest.ini  regenerate_html_only.py  requirements.md  requirements.txt  run_webserver.sh  send_back_to_queue.py  setup.sh  skillsnap.xcf  stephen_hilton.yaml  tailored_experience.yaml  (+13 more)
.venv_resumai/: pyvenv.cfg
cdk.out/: SkillsnapApiGateway.assets.json  SkillsnapApiGateway.template.json  SkillsnapCloudFront.assets.json  SkillsnapCloudFront.template.json  SkillsnapCognito.assets.json  SkillsnapCognito.template.json  SkillsnapDynamoDB.assets.json  SkillsnapDynamoDB.template.json  SkillsnapLambda.assets.json  SkillsnapLambda.template.json  SkillsnapS3.assets.json  SkillsnapS3.template.json  SkillsnapSQS.assets.json  SkillsnapSQS.template.json  manifest.json  tree.json
infrastructure/: README.md  app.py  cdk.json  requirements-dev.txt  (+1 more)
(+330 files in other folders)
