[project]
name = "resumai"
version = "1.5.20260112.4"
description = "AI-powered resume and cover letter generation system"
dependencies = [ "flask", "pyyaml", "openai", "weasyprint", "pathlib",]
[[project.authors]]
name = "Stephen Hilton"
email = "stephen@familyhilton.com"

[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "src",]
